<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/general_settings"
        android:textColor="#7C4DFF"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/setting_notify_control_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/popup_view"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting_notify_control_title"
            android:layout_marginTop="10dp"
            android:text="@string/start_button_click_not_popup_show"
            android:textSize="13sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_notify_control_switch_btn"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:checked="false" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_extension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/setting_extension_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extension_list"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting_extension_title"
            android:layout_marginTop="10dp"
            android:text="@string/edit_extension"
            android:textSize="13sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/advanced_settings"
        android:textColor="#7C4DFF"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/search_depth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:textStyle="bold"
            android:id="@+id/setting_search_depth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/search_depth"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting_search_depth_title"
            android:layout_marginTop="10dp"
            android:text="@string/setting_depth_description"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_reset"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:id="@+id/setting_reset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="App Reset"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data Delete"
            android:textSize="13sp"
            android:layout_below="@id/setting_reset_title"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Infomation"
        android:layout_marginStart="5dp"
        android:textSize="15sp"
        android:textColor="#7C4DFF"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">
        <TextView
            android:textStyle="bold"
            android:id="@+id/setting_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/setting_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/setting_version_title"/>
    </RelativeLayout>
</LinearLayout>