<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity.EditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8B9CFA"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/select_folder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_recycler" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/edit_action_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_move"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/move"
            app:icon="@drawable/ic_baseline_arrow_forward_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_copy"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/copy"
            app:icon="@drawable/ic_baseline_file_copy_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/del"
            app:icon="@drawable/ic_baseline_restore_from_trash_24" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_action_group" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/edit_btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_image"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="Image"
            app:icon="@drawable/ic_baseline_image_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_docs"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="Docs"
            app:icon="@drawable/ic_baseline_description_24"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_music"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="Music"
            app:icon="@drawable/ic_baseline_library_music_24"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_video"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="Video"
            app:icon="@drawable/ic_baseline_video_library_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_custom"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="Custom"
            app:icon="@drawable/ic_baseline_settings_24" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/from_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            app:startIconDrawable="@drawable/ic_baseline_file_copy_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/path_from_textview"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/open_from_saf"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_twotone_folder_24" />

        <ImageView
            android:id="@+id/btn_restore"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_restore_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_toolbar" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/to_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_linear">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            app:startIconDrawable="@drawable/ic_baseline_file_copy_24"
            tools:layout_editor_absoluteX="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/path_to_textview"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:enabled="false"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/open_to_saf"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_twotone_folder_24"
            tools:layout_editor_absoluteX="312dp"
            tools:layout_editor_absoluteY="429dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit_recycler"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_btn_group" />


</androidx.constraintlayout.widget.ConstraintLayout>